# esp32-webRTC

./: CMakeLists.txt  sdkconfig
components/libpeer/: CMakeLists.txt  idf_component.yml
components/libpeer/src/: agent.c  config.h  peer_signaling.c  peer_signaling.h
generic2/: CMakeLists.txt  main.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  camera.c  idf_component.yml  main.c
